--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "vimeodownload",
+  "name": "vimeoprivatedownloader",
   "version": "1.0.0",
   "description": "Node.js script helps you to download private videos from Vimeo",
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "combine": "sh vimeo-combine.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tusko/vimeo-private-downloader.git"
+    "url": "git+https://github.com/DvoraGames/VimeoPrivateDownloader.git"
   },
   "keywords": [
     "vimeo",
@@ -18,10 +17,10 @@
     "video",
     "download"
   ],
-  "author": "Tusko Trush <tusko@trush.email>",
+  "author": "DvoraGames",
   "license": "WTFPL",
   "bugs": {
-    "url": "https://github.com/Tusko/vimeo-private-downloader/issues"
+    "url": "https://github.com/DvoraGames/VimeoPrivateDownloader/issues"
   },
-  "homepage": "https://github.com/Tusko/vimeo-private-downloader#readme"
+  "homepage": "https://github.com/DvoraGames/VimeoPrivateDownloader"
 }
